force-app/main/default/objects/Portal_Task__c/Portal_Task__c.object-meta.xml
<CustomObject>
    <label>Partner Portal Task</label>
    <nameField>
        <label>Portal Task Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Partner Portal Tasks</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>