force-app/main/default/objects/Portal_Task__c/fields/Action_Type__c.field-meta.xml
<CustomField>
    <fullName>Action_Type__c</fullName>
    <label>Action Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Agreement</fullName>
            </value>
            <value>
                <fullName>Upload</fullName>
            </value>
            <value>
                <fullName>Default Distributor</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>