force-app/main/default/objects/Portal_Task__c/fields/Agreement_Text__c.field-meta.xml
<CustomField>
    <fullName>Agreement_Text__c</fullName>
    <label>Agreement Text</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>