force-app/main/default/objects/Portal_Task__c/fields/CompletedTaskURL__c.field-meta.xml
<CustomField>
    <fullName>CompletedTaskURL__c</fullName>
    <formula>if(CONTAINS($Api.Enterprise_Server_URL_500, &apos;fullsand&apos;),substitute(Image_URL__c,&apos;https://viewsonic--c.documentforce.com/servlet/servlet.ImageServer?&apos;,&apos;https://viewsonic--fullsand--c.documentforce.com/servlet/servlet.ImageServer?&apos; ),
Image_URL__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>CompletedTaskURL</label>
    <type>Text</type>
</CustomField>