force-app/main/default/objects/Portal_Task__c/fields/Country__c.field-meta.xml
<CustomField>
    <fullName>Country__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Country</label>
    <referenceTo>CountriesRegions__c</referenceTo>
    <relationshipLabel>Partner Portal Tasks</relationshipLabel>
    <relationshipName>Partner_Portal_Tasks</relationshipName>
    <type>Lookup</type>
</CustomField>