force-app/main/default/objects/Portal_Task__c/fields/Document_Download_Text__c.field-meta.xml
<CustomField>
    <fullName>Document_Download_Text__c</fullName>
    <label>Document Download Text</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>