force-app/main/default/objects/Portal_Task__c/fields/Document_Download_URL_2__c.field-meta.xml
<CustomField>
    <fullName>Document_Download_URL_2__c</fullName>
    <label>Document Download URL 2</label>
    <length>255</length>
    <type>Text</type>
</CustomField>