force-app/main/default/objects/Portal_Task__c/fields/Document_Download_URL__c.field-meta.xml
<CustomField>
    <fullName>Document_Download_URL__c</fullName>
    <label>Document Download URL</label>
    <length>255</length>
    <type>Text</type>
</CustomField>