force-app/main/default/objects/Portal_Task__c/fields/Order_Priority__c.field-meta.xml
<CustomField>
    <fullName>Order_Priority__c</fullName>
    <defaultValue>6</defaultValue>
    <label>Order Priority</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>