force-app/main/default/objects/Portal_Task__c/fields/Step_Description__c.field-meta.xml
<CustomField>
    <fullName>Step_Description__c</fullName>
    <defaultValue>&apos;Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et aliqua.&apos;</defaultValue>
    <label>Step Description</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>