force-app/main/default/objects/Portal_Task__c/fields/url__c.field-meta.xml
<CustomField>
    <fullName>url__c</fullName>
    <formula>if( CONTAINS($Api.Enterprise_Server_URL_500, &apos;fullsand&apos;),&apos;sandbox&apos;,&apos;production&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>url</label>
    <type>Text</type>
</CustomField>