force-app/main/default/objects/Portal_Task__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Country__c</columns>
    <columns>Active__c</columns>
    <columns>Type__c</columns>
    <columns>Required__c</columns>
    <columns>Order_Priority__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
    <language>en_US</language>
</ListView>